# smokesignal-vancouver

./: .gitignore  BUILD.md  Cargo.toml  Dockerfile  LICENSE  README.md  keys.example.json
.devcontainer/: devcontainer.json  docker-compose.yml  post-create.sh  postgres_init.sql
fixtures/storage/: handles.sql
i18n/en-us/: errors.ftl
migrations/: 20250201155852_init.sql  20250311163444_events.sql  20250414142725_denylist.sql
playbooks/: localdev.md  release.md
src/: config.rs  config_errors.rs  did.rs  encoding.rs  encoding_errors.rs  errors.rs  i18n.rs  jose.rs  jose_errors.rs  lib.rs  oauth.rs  oauth_client_errors.rs  oauth_errors.rs  refresh_tokens_errors.rs  resolve.rs  task_refresh_tokens.rs  validation.rs
src/atproto/: auth.rs  client.rs  datetime.rs  errors.rs  mod.rs  uri.rs  xrpc.rs
src/atproto/lexicon/: com_atproto_repo.rs  community_lexicon_calendar_event.rs  community_lexicon_calendar_rsvp.rs  community_lexicon_location.rs  events_smokesignal_calendar_event.rs  events_smokesignal_calendar_rsvp.rs  mod.rs
src/http/: cache_countries.rs  context.rs  event_form.rs  event_view.rs  handle_admin_denylist.rs  handle_admin_event.rs  handle_admin_events.rs  handle_admin_handles.rs  handle_admin_import_event.rs  handle_admin_import_rsvp.rs  handle_admin_index.rs  handle_admin_rsvp.rs  handle_admin_rsvps.rs  handle_create_event.rs  handle_create_rsvp.rs  handle_edit_event.rs  handle_import.rs  handle_index.rs  handle_migrate_event.rs  handle_migrate_rsvp.rs  handle_oauth_callback.rs  handle_oauth_jwks.rs  handle_oauth_login.rs  handle_oauth_logout.rs  handle_oauth_metadata.rs  handle_policy.rs  handle_profile.rs  handle_set_language.rs  handle_settings.rs  handle_view_event.rs  handle_view_feed.rs  handle_view_rsvp.rs  location_edit_status.rs  macros.rs  middleware_auth.rs  middleware_i18n.rs  mod.rs  pagination.rs  rsvp_form.rs  server.rs  (+4 more)
src/http/errors/: admin_errors.rs  common_error.rs  create_event_errors.rs  edit_event_error.rs  event_view_errors.rs  import_error.rs  login_error.rs  middleware_errors.rs  migrate_event_error.rs  migrate_rsvp_error.rs  mod.rs  rsvp_error.rs  url_error.rs  view_event_error.rs  web_error.rs
src/storage/: cache.rs  denylist.rs  errors.rs  event.rs  handle.rs  mod.rs  oauth.rs  types.rs
static/: humans.txt  manifest.json
templates/: acknowledgement.en-us.bare.html  acknowledgement.en-us.common.html  acknowledgement.en-us.html  admin.en-us.html  admin_denylist.en-us.html  admin_event.en-us.html  admin_events.en-us.html  admin_handles.en-us.html  admin_rsvp.en-us.html  admin_rsvps.en-us.html  alert.en-us.bare.html  alert.en-us.html  alert.en-us.partial.html  bare.en-us.html  base.en-us.html  cookie-policy.en-us.bare.html  cookie-policy.en-us.common.html  cookie-policy.en-us.html  create_event.countries_datalist.html  create_event.en-us.bare.html  create_event.en-us.common.html  create_event.en-us.html  create_event.en-us.link_form.html  create_event.en-us.location_form.html  create_event.en-us.partial.html  create_event.en-us.starts_form.html  create_rsvp.en-us.bare.html  create_rsvp.en-us.common.html  create_rsvp.en-us.html  create_rsvp.en-us.partial.html  edit_event.en-us.bare.html  edit_event.en-us.common.html  edit_event.en-us.html  edit_event.en-us.partial.html  event_list.en-us.incl.html  footer.en-us.html  form_include.html  import.en-us.bare.html  import.en-us.common.html  import.en-us.html  (+33 more)
testdata/: jwks1.json
